fix spacing below multichoice

--- a/src/pages/BasicQuiz/Components/MultipleSelect.css
+++ b/src/pages/BasicQuiz/Components/MultipleSelect.css
@@ -3,11 +3,10 @@
     flex-direction: column;
     font-size: large;
     background-color: rgba(0, 0, 0, 0.8);
-    padding: 4px;
     border-radius: 10px;
     border-style: solid;
     border-color: white;
-    margin: 10px;
+    margin-bottom: auto;
 }
 
 .checkButtons {
